[workspace]
members = ["crates/*", "forks/*", "programs/*"]
resolver = "2"

[workspace.package]
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2024"
homepage = "https://github.com/ifiokjr/wasm_solana"
license = "Unlicense"
repository = "https://github.com/ifiokjr/wasm_solana"
rust-version = "1.85.0"

[workspace.dependencies]
Inflector = { default-features = false, version = "^0.11" }
agave-reserved-account-keys = { default-features = false, version = "^2" }
anchor-lang = { default-features = false, version = "^0.31" }
anyhow = { default-features = false, version = "^1" }
assert2 = { default-features = false, version = "^0.3" }
assert_matches = { default-features = false, version = "^1" }
async-trait = { default-features = false, version = "^0.1" }
base64 = { default-features = false, version = "^0.22" }
bincode = { default-features = false, version = "^1" }
borsh = { default-features = false, version = "^1" }
bs58 = { default-features = false, version = "^0.5" }
bv = { default-features = false, version = "^0.11" }
bytemuck = { default-features = false, version = "^1" }
cfg-if = { default-features = false, version = "^1" }
chrono-humanize = { default-features = false, version = "^0.2" }
crossbeam-channel = { default-features = false, version = "^0.5" }
derive_more = { default-features = false, version = "^2" }
fork_stream = { default-features = false, version = "^0.1" }
futures = { default-features = false, version = "^0.3" }
futures-timeout = { default-features = false, version = "^0.1" }
futures-timer = { default-features = false, version = "^3" }
gloo-net = { default-features = false, version = "^0.6" }
heck = { default-features = false, version = "^0.5" }
indexmap = { default-features = false, version = "^2" }
insta = { default-features = false, version = "^1" }
js-sys = { default-features = false, version = "^0.3" }
log = { default-features = false, version = "^0.4" }
nacl = { default-features = false, version = "^0.5" }
paste = { default-features = false, version = "^1" }
pin-project = { default-features = false, version = "^1" }
port_check = { default-features = false, version = "^0.3" }
rand = { default-features = false, version = "^0.9" }
regex = { default-features = false, version = "^1" }
reqwest = { default-features = false, version = "^0.12" }
reqwest-websocket = { default-features = false, version = "^0.5" }
semver = { default-features = false, version = "^1" }
send_wrapper = { default-features = false, version = "^0.6" }
serde = { default-features = false, version = "^1" }
serde-wasm-bindgen = { default-features = false, version = "^0.6" }
serde_bytes = { default-features = false, version = "^0.11" }
serde_derive = { default-features = false, version = "^1" }
serde_json = { default-features = false, version = "^1" }
serde_tuple = { default-features = false, version = "^1" }
serde_with = { default-features = false, version = "^3" }
solana-account = { default-features = false, version = "^2" }
solana-address-lookup-table-interface = { default-features = false, version = "^2" }
solana-banks-client = { default-features = false, version = "^2" }
solana-banks-interface = { default-features = false, version = "^2" }
solana-clock = { default-features = false, version = "^2" }
solana-commitment-config = { default-features = false, version = "^2" }
solana-config-program-client = { default-features = false, version = "^1" }
solana-epoch-schedule = { default-features = false, version = "^2" }
solana-faucet = { default-features = false, version = "^2" }
solana-fee-calculator = { default-features = false, version = "^2" }
solana-hash = { default-features = false, version = "^2" }
solana-instruction = { default-features = false, version = "^2" }
solana-loader-v2-interface = { default-features = false, version = "^2" }
solana-loader-v3-interface = { default-features = false, version = "^5" }
solana-message = { default-features = false, version = "^2.4" }
solana-nonce = { default-features = false, version = "^2" }
solana-program = { default-features = false, version = "^2" }
solana-program-option = { default-features = false, version = "^2" }
solana-program-pack = { default-features = false, version = "^2" }
solana-program-runtime = { default-features = false, version = "^2" }
solana-program-test = { default-features = false, version = "^2" }
solana-pubkey = { version = "2", default-features = false }
solana-rent = { default-features = false, version = "^2" }
solana-reward-info = { default-features = false, version = "^2" }
solana-rpc = { default-features = false, version = "^2" }
solana-sdk = { default-features = false, version = "^2" }
solana-sdk-ids = { default-features = false, version = "^2" }
solana-signature = { version = "2", default-features = false }
solana-slot-hashes = { default-features = false, version = "^2" }
solana-slot-history = { default-features = false, version = "^2" }
solana-stake-interface = { default-features = false, version = "^1" }
solana-system-interface = { default-features = false, version = "^1" }
solana-sysvar = { default-features = false, version = "^2" }
solana-test-validator = { default-features = false, version = "^2" }
solana-transaction = { default-features = false, version = "^2" }
solana-transaction-context = { default-features = false, version = "^2" }
solana-transaction-error = { default-features = false, version = "^2" }
solana-version = { default-features = false, version = "^2" }
solana-vote-interface = { default-features = false, version = "^2" }
solana-zk-token-sdk = { default-features = false, version = "^2" }
spl-associated-token-account = { default-features = false, version = "^7" }
spl-generic-token = { default-features = false, version = "^1" }
spl-memo = { default-features = false, version = "^6" }
spl-pod = { default-features = false, version = "^0.5" }
spl-token = { default-features = false, version = "^8" }
spl-token-2022 = { default-features = false, version = "^9" }
spl-token-confidential-transfer-proof-extraction = { default-features = false, version = "^0.4" }
spl-token-group-interface = { default-features = false, version = "^0.6" }
spl-token-metadata-interface = { default-features = false, version = "^0.7" }
tarpc = { default-features = false, version = "^0.29" }
tempfile = { default-features = false, version = "3" }
test-log = { default-features = false, version = "^0.2" }
thiserror = { default-features = false, version = "^2" }
tokio = { default-features = false, version = "^1" }
typed-builder = { default-features = false, version = "^0.22" }
wallet_standard = { default-features = false, version = "^0.4" }
wasm-bindgen = { default-features = false, version = "^0.2" }
wasm-bindgen-futures = { default-features = false, version = "^0.4" }
wasm-bindgen-test = { default-features = false, version = "^0.3" }
web-sys = { default-features = false, version = "^0.3" }
zstd = { version = "0.13", default-features = false }

# internal crates
example_client = { path = "programs/example_client" }
example_program = { path = "programs/example_program" }

# publishable crates
memory_wallet = { path = "crates/memory_wallet", version = "0.1.24" }
test_utils_anchor = { path = "crates/test_utils_anchor" }
test_utils_insta = { path = "crates/test_utils_insta" }
test_utils_keypairs = { path = "crates/test_utils_keypairs" }
test_utils_solana = { path = "crates/test_utils_solana", version = "0.7.4" }
wasm_client_anchor = { path = "crates/wasm_client_anchor", version = "0.8.2" }
wasm_client_solana = { path = "crates/wasm_client_solana", version = "0.9.0" }

# forks
async-tungstenite = { default-features = false, version = "^0.31.0" }
getrandom = { default-features = false, version = "^0.3" }
solana-account-decoder-client-types-wasm = { path = "forks/solana-account-decoder-client-types-wasm", version = "2.3.12" }
solana-account-decoder-wasm = { path = "forks/solana-account-decoder-wasm", version = "2.3.12" }
solana-transaction-status-client-types-wasm = { path = "forks/solana-transaction-status-client-types-wasm", version = "2.3.12" }
solana-transaction-status-wasm = { path = "forks/solana-transaction-status-wasm", version = "2.3.12" }

[workspace.metadata.bin]
cargo-llvm-cov = { version = "0.6.19" }
cargo-semver-checks = { version = "0.44.0" }
wait-for-them = { version = "0.5.1", bins = ["wait-for-them"] }
release-plz = { version = "0.3.147", bins = ["release-plz"] }
wasm-bindgen-cli = { version = "0.2.104", bins = ["wasm-bindgen", "wasm-bindgen-test-runner"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release.package.example_program]
overflow-checks = true
codegen-units = 1
incremental = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[profile.release]
lto = "fat"
overflow-checks = true

[workspace.lints.rust]
# Group lints
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Individual lints
unsafe_code = "deny"
unstable_features = "deny"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
edition_2024_expr_fragment_specifier = "allow"

[workspace.lints.clippy]
# Group lints
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Individual lints
blocks_in_conditions = "allow"
cargo_common_metadata = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
expl_impl_clone_on_copy = "allow"
items_after_statements = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
no_effect_underscore_binding = "allow"
tabs-in-doc-comments = "allow"
too_many_lines = "allow"
wildcard_dependencies = "deny"
wildcard_imports = "allow"
