[package]
name = "test_utils_insta"
version = "0.1.5"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Test utils to make working with `insta` redactions easier."

[dependencies]
anyhow = { workspace = true, default-features = true }
assert2 = { workspace = true, default-features = true }
insta = { workspace = true, features = ["redactions"], default-features = true }

[lints]
workspace = true
