[package]
name = "wasm_client_anchor"
version = "0.8.1"
authors = { workspace = true }
categories = ["wasm", "web-programming"]
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
# tags = ["solana", "wallet", "web3", "blockchain", "anchor"]
description = "A wasm compatible anchor client"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { workspace = true, default-features = true }
async-trait = { workspace = true, default-features = true }
base64 = { workspace = true, default-features = true }
bytemuck = { workspace = true, default-features = true }
futures = { workspace = true, default-features = true }
js-sys = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
paste = { workspace = true, default-features = true }
pin-project = { workspace = true, default-features = true }
regex = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"], default-features = true }
serde_json = { workspace = true, default-features = true }
serde_with = { workspace = true, default-features = true }
solana-program = { workspace = true, default-features = true }
solana-sdk = { workspace = true, default-features = true }
solana-sdk-ids = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
typed-builder = { workspace = true, default-features = true }
wallet_standard = { workspace = true, features = ["solana"], default-features = true }
wasm_client_solana = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true, default-features = true }
assert2 = { workspace = true, default-features = true }
insta = { workspace = true, features = ["redactions", "json"], default-features = true }
test-log = { workspace = true, features = ["trace"], default-features = true }
tokio = { workspace = true, features = ["test-util"], default-features = true }

[features]
js = ["wasm_client_solana/js"]
ssr = ["wasm_client_solana/ssr"]
