[package]
name = "solana-account-decoder-client-types-wasm"
version = "2.3.12"
authors = { workspace = true }
documentation = "https://docs.rs/solana-account-decoder-client-types"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core RPC client types for solana-account-decoder"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true
rustdoc-args = ["--cfg=docsrs"]

[features]
zstd = ["dep:zstd"]

[dependencies]
base64 = { workspace = true, default-features = true }
bs58 = { workspace = true, features = ["std"], default-features = true }
serde = { workspace = true, default-features = true }
serde_derive = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_with = { workspace = true, default-features = true }
solana-account = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, features = ["serde", "bytemuck"], default-features = true }
typed-builder = { workspace = true, default-features = true }
zstd = { workspace = true, optional = true, default-features = true }
