[package]
name = "solana-account-decoder-wasm"
version = "2.3.12"
authors = { workspace = true }
documentation = "https://docs.rs/solana-account-decoder"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Solana account decoder"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
zstd = ["dep:zstd", "solana-account-decoder-client-types-wasm/zstd"]

[dependencies]
Inflector = { workspace = true, default-features = true }
base64 = { workspace = true, default-features = true }
bincode = { workspace = true, default-features = true }
bs58 = { workspace = true, default-features = true }
bv = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_derive = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
solana-account = { workspace = true, default-features = true }
solana-account-decoder-client-types-wasm = { workspace = true }
solana-address-lookup-table-interface = { workspace = true, features = ["bincode", "bytemuck"], default-features = true }
solana-clock = { workspace = true, default-features = true }
solana-config-program-client = { workspace = true, features = ["serde"], default-features = true }
solana-epoch-schedule = { workspace = true, default-features = true }
solana-fee-calculator = { workspace = true, default-features = true }
solana-instruction = { workspace = true, default-features = true }
solana-loader-v3-interface = { workspace = true, features = ["serde"], default-features = true }
solana-nonce = { workspace = true, features = ["serde"], default-features = true }
solana-program-option = { workspace = true, default-features = true }
solana-program-pack = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, default-features = true }
solana-rent = { workspace = true, default-features = true }
solana-sdk-ids = { workspace = true, default-features = true }
solana-slot-hashes = { workspace = true, default-features = true }
solana-slot-history = { workspace = true, default-features = true }
solana-stake-interface = { workspace = true, default-features = true }
solana-sysvar = { workspace = true, default-features = true }
solana-vote-interface = { workspace = true, features = ["bincode"], default-features = true }
spl-generic-token = { workspace = true, default-features = true }
spl-token = { workspace = true, features = ["no-entrypoint"], default-features = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"], default-features = true }
spl-token-group-interface = { workspace = true, default-features = true }
spl-token-metadata-interface = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
zstd = { workspace = true, optional = true, default-features = true }

[dev-dependencies]
assert_matches = { workspace = true, default-features = true }
solana-account = { workspace = true, features = ["bincode"], default-features = true }
solana-hash = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, features = ["rand"], default-features = true }
spl-pod = { workspace = true, default-features = true }

[lints]
workspace = true
