[package]
name = "solana-transaction-status-client-types-wasm"
version = "2.3.10"
authors = { workspace = true }
documentation = "https://docs.rs/solana-transaction-status-client-types"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core RPC client types for solana-transaction-status"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { workspace = true }
bincode = { workspace = true }
bs58 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
solana-account-decoder-client-types-wasm = { workspace = true }
solana-clock = { workspace = true, features = ["serde"] }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true, features = ["serde", "bytemuck", "borsh"] }
solana-message = { workspace = true }
solana-pubkey = { workspace = true, features = ["serde", "bytemuck", "borsh"] }
solana-reward-info = { workspace = true, features = ["serde"] }
solana-signature = { workspace = true, default-features = false }
solana-transaction = { workspace = true, features = ["serde"] }
solana-transaction-context = { workspace = true }
solana-transaction-error = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
