[package]
name = "solana-transaction-status-client-types-wasm"
version = "2.3.12"
authors = { workspace = true }
documentation = "https://docs.rs/solana-transaction-status-client-types"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Core RPC client types for solana-transaction-status"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
base64 = { workspace = true, default-features = true }
bincode = { workspace = true, default-features = true }
bs58 = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_derive = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
serde_with = { workspace = true, default-features = true }
solana-account-decoder-client-types-wasm = { workspace = true }
solana-clock = { workspace = true, features = ["serde"], default-features = true }
solana-commitment-config = { workspace = true, default-features = true }
solana-hash = { workspace = true, features = ["serde", "bytemuck", "borsh"], default-features = true }
solana-message = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, features = ["serde", "bytemuck", "borsh"], default-features = true }
solana-reward-info = { workspace = true, features = ["serde"], default-features = true }
solana-signature = { workspace = true, default-features = false }
solana-transaction = { workspace = true, features = ["serde"], default-features = true }
solana-transaction-context = { workspace = true, default-features = true }
solana-transaction-error = { workspace = true, features = ["serde"], default-features = true }
thiserror = { workspace = true, default-features = true }
