[package]
name = "solana-transaction-status-wasm"
version = "2.3.12"
authors = { workspace = true }
documentation = "https://docs.rs/solana-transaction-status"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Solana transaction status types"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
Inflector = { workspace = true, default-features = true }
agave-reserved-account-keys = { workspace = true, default-features = true }
base64 = { workspace = true, default-features = true }
bincode = { workspace = true, default-features = true }
borsh = { workspace = true, default-features = true }
bs58 = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
serde_derive = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
solana-account-decoder-wasm = { workspace = true }
solana-address-lookup-table-interface = { workspace = true, default-features = true }
solana-clock = { workspace = true, default-features = true }
solana-hash = { workspace = true, default-features = true }
solana-instruction = { workspace = true, default-features = true }
solana-loader-v2-interface = { workspace = true, features = ["bincode"], default-features = true }
solana-loader-v3-interface = { workspace = true, features = ["bincode"], default-features = true }
solana-message = { workspace = true, default-features = true }
solana-program-option = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, default-features = true }
solana-reward-info = { workspace = true, default-features = true }
solana-sdk-ids = { workspace = true, default-features = true }
solana-signature = { workspace = true, default-features = true }
solana-stake-interface = { workspace = true, default-features = true }
solana-system-interface = { workspace = true, default-features = true }
solana-transaction = { workspace = true, default-features = true }
solana-transaction-error = { workspace = true, default-features = true }
solana-transaction-status-client-types-wasm = { workspace = true }
solana-vote-interface = { workspace = true, default-features = true }
spl-associated-token-account = { workspace = true, features = ["no-entrypoint"], default-features = true }
spl-memo = { workspace = true, features = ["no-entrypoint"], default-features = true }
spl-token = { workspace = true, features = ["no-entrypoint"], default-features = true }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"], default-features = true }
spl-token-group-interface = { workspace = true, default-features = true }
spl-token-metadata-interface = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
bytemuck = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, features = ["rand"], default-features = true }
spl-token-confidential-transfer-proof-extraction = { workspace = true, default-features = true }
