[package]
name = "example_client"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = false
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anchor-lang = { workspace = true, default-features = true }
example_program = { workspace = true }
futures = { workspace = true, default-features = true }
log = { workspace = true, default-features = true }
solana-program = { workspace = true, default-features = true }
solana-sdk = { workspace = true, default-features = true }
typed-builder = { workspace = true, default-features = true }
wallet_standard = { workspace = true, features = ["solana"], default-features = true }
wasm_client_anchor = { workspace = true, features = ["ssr"] }
wasm_client_solana = { workspace = true, features = ["ssr"] }

[dev-dependencies]
anyhow = { workspace = true, default-features = true }
assert2 = { workspace = true, default-features = true }
insta = { workspace = true, features = ["ron", "yaml", "redactions"], default-features = true }
memory_wallet = { workspace = true }
test-log = { workspace = true, features = ["log", "trace"], default-features = true }
test_utils_anchor = { workspace = true, features = ["test_validator"] }
test_utils_insta = { workspace = true }
test_utils_keypairs = { workspace = true }
test_utils_solana = { workspace = true, features = ["test_validator"] }
tokio = { workspace = true, features = ["test-util", "rt", "macros", "time"], default-features = true }

[lints]
workspace = true
